--- a/Client/carRentalWA/src/components/Navigationi/Navigation.css
+++ b/Client/carRentalWA/src/components/Navigationi/Navigation.css
@@ -13,9 +13,21 @@
 
 /*for the logo*/
 .logo{
-    margin-left: 3vh;
+    
+    height: 4vh;
+    width: 5vw;
+    margin-left: 4vh;
     background-color: aqua;
     cursor: pointer;
+    border-radius: 2vh;
+    overflow: hidden;
+
+}
+
+.Logo-img{
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
 }
 
 
