--- a/Client/carRentalWA/src/components/Navigationi/Navigation.css
+++ b/Client/carRentalWA/src/components/Navigationi/Navigation.css
@@ -7,7 +7,8 @@
     align-items: center;
     border: none;
     border-radius: 2vh;
-    position: fixed;
+    position: sticky;
+    top: 0;
 }
 
 
